# openrw

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  cmake_configure.cmake  cmake_options.cmake  conanfile.py  meson.build  meson_options.txt
assets/: CMakeLists.txt
cmake/ctest/: build.ctest  configure_darwin.ctest  configure_linux.ctest  configure_windows.ctest  script_ci.ctest  script_experimental.ctest
cmake/modules/: GenerateGlad.cmake  WrapTargets.cmake
rwcore/: CMakeLists.txt
rwcore/data/: Clump.hpp
rwcore/gl/: DrawBuffer.cpp  DrawBuffer.hpp  GeometryBuffer.hpp  TextureData.hpp  gl_core_3_3.c  gl_core_3_3.h
rwcore/loaders/: LoaderDFF.cpp  LoaderIMG.cpp  LoaderIMG.hpp  LoaderTXD.cpp  RWBinaryStream.hpp
rwcore/platform/: FileHandle.hpp  FileIndex.cpp
rwengine/: CMakeLists.txt  meson.build
rwengine/src/ai/: CharacterController.cpp  DefaultAIController.cpp  TrafficDirector.cpp  TrafficDirector.hpp
rwengine/src/core/: Logger.cpp  Logger.hpp
rwengine/src/data/: Chase.cpp  WeaponData.hpp
rwengine/src/engine/: Animator.cpp  Animator.hpp  GameData.cpp  GameData.hpp  GameWorld.cpp  SaveGame.cpp
rwengine/src/loaders/: GenericDATLoader.cpp  LoaderCOL.cpp  LoaderGXT.cpp  LoaderIFP.cpp  LoaderIFP.hpp
rwengine/src/objects/: CharacterObject.cpp  InstanceObject.cpp  InstanceObject.hpp  PickupObject.cpp  VehicleObject.cpp  VehicleObject.hpp
rwengine/src/render/: DebugDraw.cpp  DebugDraw.hpp  GameRenderer.hpp  MapRenderer.cpp  ObjectRenderer.cpp  ObjectRenderer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  TextRenderer.cpp  WaterRenderer.hpp
rwengine/src/script/: SCMFile.cpp  SCMFile.hpp  ScriptMachine.cpp
rwengine/src/script/modules/: GTA3ModuleImpl.inl
rwgame/: CMakeLists.txt  GameBase.cpp  GameBase.hpp  GameConfig.cpp  GameWindow.cpp  GameWindow.hpp  RWConfig.cpp  RWConfig.hpp  RWConfig.inc  RWGame.cpp  RWGame.hpp  RWImGui.cpp  RWImGui.hpp  RWPython.cpp  RWPython.hpp  RWRingBuffer.hpp  RWRingBufferLog.cpp  RWRingBufferLog.hpp  main.cpp  meson.build
rwgame/python/: config.cpp  game.cpp  logging.cpp  module.cpp  pyembed.cpp  pymain.cpp  pyopenrw.hpp  pyopenrw_priv.hpp
rwgame/states/: DebugState.cpp  IngameState.cpp
rwlib/: meson.build
rwtools/: CMakeLists.txt
rwtools/rwfont/: CMakeLists.txt  rwfontmap.cpp
rwtools/rwtexture/: CMakeLists.txt  names.cpp  names.hpp  rwtxddump.cpp
rwtools/rwtexture/librw/: streams.hpp
rwviewer/: CMakeLists.txt  ViewerWindow.cpp  meson.build
scripts/conan/: create_vs_solution.py
scripts/docker/: arch_latest.docker  conan_base.docker  docker_travis.sh  fedora_latest.docker  ubuntu_latest.docker
tests/: CMakeLists.txt  meson.build  test_Config.cpp  test_Config.py  test_Data.cpp  test_GameData.cpp  test_Globals.cpp  test_Globals.hpp  test_Globals.py  test_Logger.cpp  test_Logger.py  test_Pickup.cpp  test_RWBStream.cpp  test_RWRingBuffer.cpp
tools/: CMakeLists.txt  rwembedder.cpp
